# openpois

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  Makefile  README.md  SUPPORT.md  config.yaml  environment.yml  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: deploy-site.yml
docs/: api.rst  conf.py  index.rst  workflows.rst
docs/_static/: custom.css
docs/_templates/components/: view-this-page.html
exploratory/: osm_api_query_examples.txt  osm_data_viz.py  osm_download.py  overpass_query_examples.txt
exploratory/conflation/: conflate.py  format_for_upload.py  summarize.py  upload_to_s3.py
exploratory/foursquare/: download.py
exploratory/models/: osm_turnover.py  pytorch_simple.py
exploratory/osm_data/: data_viz.py  download.py  format_tabular.py
exploratory/osm_snapshot/: apply_model.py  download.py  format_for_upload.py  upload_to_s3.py
exploratory/overture/: download.py
exploratory/snapshots/: load_samples.py
scripts/: build_taxonomy.py
scripts/conflation/: README.md  conflate.py  summarize.py
scripts/foursquare/: download.py
scripts/models/: osm_turnover.py
scripts/osm_data/: data_viz.py  download.py  format_tabular.py
scripts/osm_snapshot/: download.py  upload_to_s3.py
scripts/overture/: download.py
scripts/snapshots/: load_samples.py
site/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
site/public/: about.html
site/src/: App.vue  constants.js  main.js  utils.js
site/src/assets/: styles.css
site/src/components/: AmenityFilter.vue  ConfidenceLegend.vue  MapContainer.vue  PoiPopup.vue  SearchBar.vue  SourceToggle.vue
site/src/composables/: useDuckDB.js  useGeocoder.js  useGeohash.js  useGeolocation.js
site/src/layers/: conflatedLayer.js  foursquareLayer.js  osmLayer.js  overtureLayer.js  styleFactory.js
site/src/queries/: conflatedQuery.js  foursquareQuery.js  osmQuery.js  overtureQuery.js  queryDebouncer.js
src/openpois/: __init__.py  hello_world.py
src/openpois/conflation/: match.py  merge.py  taxonomy.py
src/openpois/conflation/data/: match_radii.csv  taxonomy_crosswalk_openstreetmap.csv  taxonomy_crosswalk_overture_maps.csv  top_level_matches.csv
src/openpois/foursquare/: download.py
src/openpois/io/: geohash_partition.py  osm_history.py  osm_snapshot.py  overture.py  s3.py
src/openpois/models/: apply.py  base_model.py  event_rate.py  model_fitter.py  osm_models.py  setup.py
src/openpois/osm/: __init__.py  _poi_handler.py  change_plots.py  download.py  format_observations.py  snapshot.py
src/openpois/overture/: download.py
tests/: conftest.py  test_apply.py  test_foursquare_download.py  test_geohash_partition.py  test_match.py  test_merge.py  test_methods.py  test_osm_snapshot.py  test_overture_download.py  test_poi_handler.py  test_taxonomy.py
