[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openpois"
authors = [{ name = "Nathaniel Henry", email = "nat@henryspatialanalysis.com" }]
description = "Open POI conflation between OpenStreetMap, Overture Maps, and FSQ"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.10.0"
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/henryspatialanalysis/openpois"
Source = "https://github.com/henryspatialanalysis/openpois"
Tracker = "https://github.com/henryspatialanalysis/openpois/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"config_versioned" = ["data/*.yaml", "data/*.csv"]
