[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openpois"
authors = [{ name = "Nathaniel Henry", email = "nat@henryspatialanalysis.com" }]
description = "Open POI conflation between OpenStreetMap, Overture Maps, and FSQ"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.10.0"
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/henryspatialanalysis/openpois"
Source = "https://github.com/henryspatialanalysis/openpois"
Tracker = "https://github.com/henryspatialanalysis/openpois/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"config_versioned" = ["data/*.yaml", "data/*.csv"]

[tool.black]
line-length = 90

[tool.flake8]
max-line-length = 90
extend-ignore = ["E203", "E251", "W503"]

[tool.pylint.format]
max-line-length = 90

[tool.pylint."messages control"]
disable = [
    "C0114",   # missing-module-docstring
    "C0115",   # missing-class-docstring
    "C0116",   # missing-function-docstring
    "E1102",   # not-callable: false positive for torch.linalg functions
    "R0902",   # too-many-instance-attributes: legitimate for model state classes
    "R0913",   # too-many-arguments: common in data science APIs
    "R0914",   # too-many-locals: acceptable in complex data processing functions
    "R0917",   # too-many-positional-arguments: common in data science APIs
    "W0102",   # dangerous-default-value: acceptable for keyword-only dict/list args
    "W0622",   # redefined-builtin: 'type' as parameter name is a common pattern
    "W0612",   # unused-variable: false positive for pandas query @variable references
    "W0718",   # broad-exception-caught: intentional in network download functions
]

[tool.pylint.basic]
good-names = ["L_prec", "i", "j", "k", "x", "y", "z", "f", "e", "t"]
